Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18567

Garbage data block can be ready by the document I/O handler

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • forestdb
    • None
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      When a block is allocated but not written back into the DB file (this can happen due to various reasons), both block cache and DB file don't contain the block so that garbage data is read if we
      call filemgr_read() on the block. If the block marker of the garbage block on the file side
      accidentally same as document block marker, various kinds of unexpected behavior can happen.

      To avoid this issue, we need to insert a dummy block with a specific block marker into buffer cache once it is allocated. This happens on the B+tree index blocks only so that we don't do the
      same work for document blocks.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jung-sang Jung-Sang Ahn (Inactive)
            chiyoung Chiyoung Seo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty