[BP] MB-18567 Insert a dummy block into buffer cache before use it

- When a block is allocated but not written back into the DB file
(this can happen due to various reasons), both block cache and DB
file do not contain the block so that garbage data is read if we
call filemgr_read().

- If the block marker of the garbage block on the file side is
accidentally set to document block marker, various kinds of
unexpected behavior can happen.

- To avoid this issue, we insert a dummy block including a specific
block marker into buffer cache once it is allocated.

- It happens on the B+tree index blocks only so that we don't do the
same work for document blocks due to performance issue.

Change-Id: Id6a97892491ebae81d22b37d114335d04074024b